# phcsim

./: LICENSE  README.md  pyproject.toml
R/: example.R
data/: model_inputs.xlsx
phcsim/: __init__.py  data.py  demographics.py  diseases.py  healthcare.py  load_sheet.py  sim.py  utils.py  version.py
tests/: test_demographics.py  test_healthcare.py  test_sim.py
