[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PHCsim"
dynamic = ["version"]
description = "Primary Health Care Simulator"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["agent-based model", "simulation", "primary health care"]

authors = [
  { name = "Brittany Hagedorn" },
  { name = "Cliff Kerr" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
    "starsim>=2.3.2",
    "numpy",
    "pandas",
    "sciris",
    "matplotlib",
]

[project.urls]
"Website" = "https://starsim.org"
"Source" = "https://github.com/starsimhub/phcsim/"

[tool.setuptools.packages.find]
where = ["."]
include = ["phcsim*"]

[tool.setuptools.package-data]
mypkg = ["*.ipynb", "*.rst", "*.csv"]

[tool.setuptools.dynamic]
version = {attr = "phcsim.version.__version__"}